--- a/renderer/global.css
+++ b/renderer/global.css
@@ -14,6 +14,10 @@ Some normalization from sanitize.css (https://csstools.github.io/sanitize.css/
   vertical-align: inherit;
 }
 
+:where(:root) {
+  line-height: 1.4;
+}
+
 :where(body) {
   margin: 0;
 }
@@ -27,4 +31,8 @@ body {
 main {
   max-inline-size: 1000px;
   margin-inline: auto;
+}
+
+.western-text {
+  font-family: 'Open Sans', Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
